Backend/F1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIAGONAL
    LLAVEA
    LLAVEC
    ignore_COMENTARIOMULTILINEA
    ignore_COMENTARIOUNILINEA

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     fininstr -> PUNTOCOMA
Rule 3     instrucciones -> instrucciones instruccion
Rule 4     instrucciones -> instruccion
Rule 5     instruccion -> imprimir_instr fininstr
Rule 6     instruccion -> asignacion_instr fininstr
Rule 7     instruccion -> declaracion_var_instr fininstr
Rule 8     instruccion -> modificar_arreglo fininstr
Rule 9     instruccion -> funciones_instr fininstr
Rule 10    instruccion -> while_instr fininstr
Rule 11    instruccion -> llamada_funcion_instr fininstr
Rule 12    instruccion -> break_instr fininstr
Rule 13    instruccion -> continue_instr fininstr
Rule 14    instruccion -> return_instr fininstr
Rule 15    instruccion -> if_instr fininstr
Rule 16    instruccion -> for_instr fininstr
Rule 17    instruccion -> pop_instr fininstr
Rule 18    instruccion -> push_instr fininstr
Rule 19    instruccion -> structs_instr fininstr
Rule 20    instruccion -> llamada_funcion_struct_instr fininstr
Rule 21    instruccion -> modificacion_struct fininstr
Rule 22    instruccion -> error fininstr
Rule 23    expresion -> PARENTESISA expresion PARENTESISC
Rule 24    expresion -> CADENA
Rule 25    expresion -> CARACTER
Rule 26    expresion -> ENTERO
Rule 27    expresion -> DOBLE
Rule 28    expresion -> NOTHING
Rule 29    expresion -> ID
Rule 30    expresion -> bandera
Rule 31    expresion -> expresion MAS expresion
Rule 32    expresion -> expresion MENOS expresion
Rule 33    expresion -> expresion ASTERISCO expresion
Rule 34    expresion -> expresion DIVISION expresion
Rule 35    expresion -> expresion POTENCIA expresion
Rule 36    expresion -> expresion PORCENTAJE expresion
Rule 37    expresion -> expresion IGUALIGUAL expresion
Rule 38    expresion -> expresion DIFERENTE expresion
Rule 39    expresion -> expresion MENOR expresion
Rule 40    expresion -> expresion MAYOR expresion
Rule 41    expresion -> expresion MENORIGUAL expresion
Rule 42    expresion -> expresion MAYORIGUAL expresion
Rule 43    expresion -> expresion AND expresion
Rule 44    expresion -> expresion OR expresion
Rule 45    expresion -> NOT expresion
Rule 46    expresion -> MENOS expresion
Rule 47    expresion -> llamada_funcion_instr
Rule 48    expresion -> llamada_funcion_struct_instr
Rule 49    expresion -> CORCHETEA expresiones_coma CORCHETEC
Rule 50    expresion -> acceso_arreglo
Rule 51    expresion -> push_instr
Rule 52    expresion -> pop_instr
Rule 53    expresion -> acceso_struct
Rule 54    expresion -> PARSE PARENTESISA INT64 COMA expresion PARENTESISC
Rule 55    expresion -> PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
Rule 56    expresion -> SSTRING PARENTESISA expresion PARENTESISC
Rule 57    pop_instr -> POP NOT PARENTESISA expresion PARENTESISC
Rule 58    push_instr -> PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
Rule 59    expresiones_coma -> expresiones_coma COMA expresion
Rule 60    expresiones_coma -> expresion
Rule 61    bandera -> TRUE
Rule 62    bandera -> FALSE
Rule 63    tipo -> INT64
Rule 64    tipo -> FLOAT64
Rule 65    tipo -> STRING
Rule 66    tipo -> CHAR
Rule 67    tipo -> BOOL
Rule 68    asignacion_instr -> ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 69    asignacion_instr -> ID IGUAL expresion
Rule 70    modificar_arreglo -> ID lista_dimensiones IGUAL expresion
Rule 71    acceso_arreglo -> ID lista_dimensiones
Rule 72    lista_dimensiones -> lista_dimensiones CORCHETEA expresion CORCHETEC
Rule 73    lista_dimensiones -> CORCHETEA expresion CORCHETEC
Rule 74    declaracion_var_instr -> LOCAL ID
Rule 75    declaracion_var_instr -> GLOBAL ID
Rule 76    declaracion_var_instr -> ID
Rule 77    declaracion_var_instr -> GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 78    declaracion_var_instr -> LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 79    declaracion_var_instr -> GLOBAL ID IGUAL expresion
Rule 80    declaracion_var_instr -> LOCAL ID IGUAL expresion
Rule 81    imprimir_instr -> PRINT PARENTESISA PARENTESISC
Rule 82    imprimir_instr -> PRINTLN PARENTESISA PARENTESISC
Rule 83    imprimir_instr -> PRINT PARENTESISA expresiones_coma PARENTESISC
Rule 84    imprimir_instr -> PRINTLN PARENTESISA expresiones_coma PARENTESISC
Rule 85    funciones_instr -> FUNCTION ID PARENTESISA PARENTESISC instrucciones END
Rule 86    funciones_instr -> FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
Rule 87    parametros -> parametros COMA parametro
Rule 88    parametros -> parametro
Rule 89    parametro -> ID DOSPUNTOS DOSPUNTOS tipo
Rule 90    parametro -> ID
Rule 91    llamada_funcion_instr -> ID PARENTESISA PARENTESISC
Rule 92    llamada_funcion_struct_instr -> ID PARENTESISA parametros_llamada PARENTESISC
Rule 93    parametros_llamada -> parametros_llamada COMA expresion
Rule 94    parametros_llamada -> expresion
Rule 95    while_instr -> WHILE expresion instrucciones END
Rule 96    for_instr -> FOR declaracion_var_instr IN expresion instrucciones END
Rule 97    for_instr -> FOR declaracion_var_instr IN expresion DOSPUNTOS expresion instrucciones END
Rule 98    return_instr -> RETURN expresion
Rule 99    return_instr -> RETURN
Rule 100   break_instr -> BREAK
Rule 101   continue_instr -> CONTINUE
Rule 102   if_instr -> IF expresion instrucciones END
Rule 103   if_instr -> IF expresion instrucciones elseifs_instr ELSE instrucciones END
Rule 104   if_instr -> IF expresion instrucciones elseifs_instr END
Rule 105   if_instr -> IF expresion instrucciones ELSE instrucciones END
Rule 106   elseifs_instr -> elseifs_instr elseif_instr
Rule 107   elseifs_instr -> elseif_instr
Rule 108   elseif_instr -> ELSEIF expresion instrucciones
Rule 109   structs_instr -> structs_inmutable
Rule 110   structs_instr -> structs_mutable
Rule 111   structs_inmutable -> STRUCT ID lista_atributos END
Rule 112   structs_mutable -> MUTABLE STRUCT ID lista_atributos END
Rule 113   lista_atributos -> lista_atributos atributo fininstr
Rule 114   lista_atributos -> atributo fininstr
Rule 115   atributo -> ID DOSPUNTOS DOSPUNTOS tipo
Rule 116   atributo -> ID
Rule 117   acceso_struct -> ID PUNTO ID
Rule 118   modificacion_struct -> ID PUNTO ID IGUAL expresion

Terminals, with rules where they appear

AND                  : 43
ASTERISCO            : 33
BOOL                 : 67
BREAK                : 100
CADENA               : 24
CARACTER             : 25
CHAR                 : 66
COMA                 : 54 55 58 59 87 93
CONTINUE             : 101
CORCHETEA            : 49 72 73
CORCHETEC            : 49 72 73
DIAGONAL             : 
DIFERENTE            : 38
DIVISION             : 34
DOBLE                : 27
DOSPUNTOS            : 68 68 77 77 78 78 89 89 97 115 115
ELSE                 : 103 105
ELSEIF               : 108
END                  : 85 86 95 96 97 102 103 104 105 111 112
ENTERO               : 26
FALSE                : 62
FLOAT64              : 55 64
FOR                  : 96 97
FUNCTION             : 85 86
GLOBAL               : 75 77 79
ID                   : 29 68 69 70 71 74 75 76 77 78 79 80 85 86 89 90 91 92 111 112 115 116 117 117 118 118
IF                   : 102 103 104 105
IGUAL                : 68 69 70 77 78 79 80 118
IGUALIGUAL           : 37
IN                   : 96 97
INT64                : 54 63
LLAVEA               : 
LLAVEC               : 
LOCAL                : 74 78 80
MAS                  : 31
MAYOR                : 40
MAYORIGUAL           : 42
MENOR                : 39
MENORIGUAL           : 41
MENOS                : 32 46
MUTABLE              : 112
NOT                  : 45 57 58
NOTHING              : 28
OR                   : 44
PARENTESISA          : 23 54 55 56 57 58 81 82 83 84 85 86 91 92
PARENTESISC          : 23 54 55 56 57 58 81 82 83 84 85 86 91 92
PARSE                : 54 55
POP                  : 57
PORCENTAJE           : 36
POTENCIA             : 35
PRINT                : 81 83
PRINTLN              : 82 84
PUNTO                : 117 118
PUNTOCOMA            : 2
PUSH                 : 58
RETURN               : 98 99
SSTRING              : 56
STRING               : 65
STRUCT               : 111 112
TRUE                 : 61
WHILE                : 95
error                : 22
ignore_COMENTARIOMULTILINEA : 
ignore_COMENTARIOUNILINEA : 

Nonterminals, with rules where they appear

acceso_arreglo       : 50
acceso_struct        : 53
asignacion_instr     : 6
atributo             : 113 114
bandera              : 30
break_instr          : 12
continue_instr       : 13
declaracion_var_instr : 7 96 97
elseif_instr         : 106 107
elseifs_instr        : 103 104 106
expresion            : 23 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 46 54 55 56 57 58 58 59 60 68 69 70 72 73 77 78 79 80 93 94 95 96 97 97 98 102 103 104 105 108 118
expresiones_coma     : 49 59 83 84
fininstr             : 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 113 114
for_instr            : 16
funciones_instr      : 9
if_instr             : 15
imprimir_instr       : 5
inicio               : 0
instruccion          : 3 4
instrucciones        : 1 3 85 86 95 96 97 102 103 103 104 105 105 108
lista_atributos      : 111 112 113
lista_dimensiones    : 70 71 72
llamada_funcion_instr : 11 47
llamada_funcion_struct_instr : 20 48
modificacion_struct  : 21
modificar_arreglo    : 8
parametro            : 87 88
parametros           : 86 87
parametros_llamada   : 92 93
pop_instr            : 17 52
push_instr           : 18 51
return_instr         : 14
structs_inmutable    : 109
structs_instr        : 19
structs_mutable      : 110
tipo                 : 68 77 78 89 115
while_instr          : 10

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instruccion -> . imprimir_instr fininstr
    (6) instruccion -> . asignacion_instr fininstr
    (7) instruccion -> . declaracion_var_instr fininstr
    (8) instruccion -> . modificar_arreglo fininstr
    (9) instruccion -> . funciones_instr fininstr
    (10) instruccion -> . while_instr fininstr
    (11) instruccion -> . llamada_funcion_instr fininstr
    (12) instruccion -> . break_instr fininstr
    (13) instruccion -> . continue_instr fininstr
    (14) instruccion -> . return_instr fininstr
    (15) instruccion -> . if_instr fininstr
    (16) instruccion -> . for_instr fininstr
    (17) instruccion -> . pop_instr fininstr
    (18) instruccion -> . push_instr fininstr
    (19) instruccion -> . structs_instr fininstr
    (20) instruccion -> . llamada_funcion_struct_instr fininstr
    (21) instruccion -> . modificacion_struct fininstr
    (22) instruccion -> . error fininstr
    (81) imprimir_instr -> . PRINT PARENTESISA PARENTESISC
    (82) imprimir_instr -> . PRINTLN PARENTESISA PARENTESISC
    (83) imprimir_instr -> . PRINT PARENTESISA expresiones_coma PARENTESISC
    (84) imprimir_instr -> . PRINTLN PARENTESISA expresiones_coma PARENTESISC
    (68) asignacion_instr -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (69) asignacion_instr -> . ID IGUAL expresion
    (74) declaracion_var_instr -> . LOCAL ID
    (75) declaracion_var_instr -> . GLOBAL ID
    (76) declaracion_var_instr -> . ID
    (77) declaracion_var_instr -> . GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (78) declaracion_var_instr -> . LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (79) declaracion_var_instr -> . GLOBAL ID IGUAL expresion
    (80) declaracion_var_instr -> . LOCAL ID IGUAL expresion
    (70) modificar_arreglo -> . ID lista_dimensiones IGUAL expresion
    (85) funciones_instr -> . FUNCTION ID PARENTESISA PARENTESISC instrucciones END
    (86) funciones_instr -> . FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
    (95) while_instr -> . WHILE expresion instrucciones END
    (91) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (100) break_instr -> . BREAK
    (101) continue_instr -> . CONTINUE
    (98) return_instr -> . RETURN expresion
    (99) return_instr -> . RETURN
    (102) if_instr -> . IF expresion instrucciones END
    (103) if_instr -> . IF expresion instrucciones elseifs_instr ELSE instrucciones END
    (104) if_instr -> . IF expresion instrucciones elseifs_instr END
    (105) if_instr -> . IF expresion instrucciones ELSE instrucciones END
    (96) for_instr -> . FOR declaracion_var_instr IN expresion instrucciones END
    (97) for_instr -> . FOR declaracion_var_instr IN expresion DOSPUNTOS expresion instrucciones END
    (57) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC
    (58) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
    (109) structs_instr -> . structs_inmutable
    (110) structs_instr -> . structs_mutable
    (92) llamada_funcion_struct_instr -> . ID PARENTESISA parametros_llamada PARENTESISC
    (118) modificacion_struct -> . ID PUNTO ID IGUAL expresion
    (111) structs_inmutable -> . STRUCT ID lista_atributos END
    (112) structs_mutable -> . MUTABLE STRUCT ID lista_atributos END

    error           shift and go to state 21
    PRINT           shift and go to state 22
    PRINTLN         shift and go to state 23
    ID              shift and go to state 24
    LOCAL           shift and go to state 25
    GLOBAL          shift and go to state 26
    FUNCTION        shift and go to state 27
    WHILE           shift and go to state 28
    BREAK           shift and go to state 29
    CONTINUE        shift and go to state 30
    RETURN          shift and go to state 31
    IF              shift and go to state 32
    FOR             shift and go to state 33
    POP             shift and go to state 34
    PUSH            shift and go to state 35
    STRUCT          shift and go to state 38
    MUTABLE         shift and go to state 39

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    asignacion_instr               shift and go to state 5
    declaracion_var_instr          shift and go to state 6
    modificar_arreglo              shift and go to state 7
    funciones_instr                shift and go to state 8
    while_instr                    shift and go to state 9
    llamada_funcion_instr          shift and go to state 10
    break_instr                    shift and go to state 11
    continue_instr                 shift and go to state 12
    return_instr                   shift and go to state 13
    if_instr                       shift and go to state 14
    for_instr                      shift and go to state 15
    pop_instr                      shift and go to state 16
    push_instr                     shift and go to state 17
    structs_instr                  shift and go to state 18
    llamada_funcion_struct_instr   shift and go to state 19
    modificacion_struct            shift and go to state 20
    structs_inmutable              shift and go to state 36
    structs_mutable                shift and go to state 37

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (3) instrucciones -> instrucciones . instruccion
    (5) instruccion -> . imprimir_instr fininstr
    (6) instruccion -> . asignacion_instr fininstr
    (7) instruccion -> . declaracion_var_instr fininstr
    (8) instruccion -> . modificar_arreglo fininstr
    (9) instruccion -> . funciones_instr fininstr
    (10) instruccion -> . while_instr fininstr
    (11) instruccion -> . llamada_funcion_instr fininstr
    (12) instruccion -> . break_instr fininstr
    (13) instruccion -> . continue_instr fininstr
    (14) instruccion -> . return_instr fininstr
    (15) instruccion -> . if_instr fininstr
    (16) instruccion -> . for_instr fininstr
    (17) instruccion -> . pop_instr fininstr
    (18) instruccion -> . push_instr fininstr
    (19) instruccion -> . structs_instr fininstr
    (20) instruccion -> . llamada_funcion_struct_instr fininstr
    (21) instruccion -> . modificacion_struct fininstr
    (22) instruccion -> . error fininstr
    (81) imprimir_instr -> . PRINT PARENTESISA PARENTESISC
    (82) imprimir_instr -> . PRINTLN PARENTESISA PARENTESISC
    (83) imprimir_instr -> . PRINT PARENTESISA expresiones_coma PARENTESISC
    (84) imprimir_instr -> . PRINTLN PARENTESISA expresiones_coma PARENTESISC
    (68) asignacion_instr -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (69) asignacion_instr -> . ID IGUAL expresion
    (74) declaracion_var_instr -> . LOCAL ID
    (75) declaracion_var_instr -> . GLOBAL ID
    (76) declaracion_var_instr -> . ID
    (77) declaracion_var_instr -> . GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (78) declaracion_var_instr -> . LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (79) declaracion_var_instr -> . GLOBAL ID IGUAL expresion
    (80) declaracion_var_instr -> . LOCAL ID IGUAL expresion
    (70) modificar_arreglo -> . ID lista_dimensiones IGUAL expresion
    (85) funciones_instr -> . FUNCTION ID PARENTESISA PARENTESISC instrucciones END
    (86) funciones_instr -> . FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
    (95) while_instr -> . WHILE expresion instrucciones END
    (91) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (100) break_instr -> . BREAK
    (101) continue_instr -> . CONTINUE
    (98) return_instr -> . RETURN expresion
    (99) return_instr -> . RETURN
    (102) if_instr -> . IF expresion instrucciones END
    (103) if_instr -> . IF expresion instrucciones elseifs_instr ELSE instrucciones END
    (104) if_instr -> . IF expresion instrucciones elseifs_instr END
    (105) if_instr -> . IF expresion instrucciones ELSE instrucciones END
    (96) for_instr -> . FOR declaracion_var_instr IN expresion instrucciones END
    (97) for_instr -> . FOR declaracion_var_instr IN expresion DOSPUNTOS expresion instrucciones END
    (57) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC
    (58) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
    (109) structs_instr -> . structs_inmutable
    (110) structs_instr -> . structs_mutable
    (92) llamada_funcion_struct_instr -> . ID PARENTESISA parametros_llamada PARENTESISC
    (118) modificacion_struct -> . ID PUNTO ID IGUAL expresion
    (111) structs_inmutable -> . STRUCT ID lista_atributos END
    (112) structs_mutable -> . MUTABLE STRUCT ID lista_atributos END

    $end            reduce using rule 1 (inicio -> instrucciones .)
    error           shift and go to state 21
    PRINT           shift and go to state 22
    PRINTLN         shift and go to state 23
    ID              shift and go to state 24
    LOCAL           shift and go to state 25
    GLOBAL          shift and go to state 26
    FUNCTION        shift and go to state 27
    WHILE           shift and go to state 28
    BREAK           shift and go to state 29
    CONTINUE        shift and go to state 30
    RETURN          shift and go to state 31
    IF              shift and go to state 32
    FOR             shift and go to state 33
    POP             shift and go to state 34
    PUSH            shift and go to state 35
    STRUCT          shift and go to state 38
    MUTABLE         shift and go to state 39

    instruccion                    shift and go to state 40
    imprimir_instr                 shift and go to state 4
    asignacion_instr               shift and go to state 5
    declaracion_var_instr          shift and go to state 6
    modificar_arreglo              shift and go to state 7
    funciones_instr                shift and go to state 8
    while_instr                    shift and go to state 9
    llamada_funcion_instr          shift and go to state 10
    break_instr                    shift and go to state 11
    continue_instr                 shift and go to state 12
    return_instr                   shift and go to state 13
    if_instr                       shift and go to state 14
    for_instr                      shift and go to state 15
    pop_instr                      shift and go to state 16
    push_instr                     shift and go to state 17
    structs_instr                  shift and go to state 18
    llamada_funcion_struct_instr   shift and go to state 19
    modificacion_struct            shift and go to state 20
    structs_inmutable              shift and go to state 36
    structs_mutable                shift and go to state 37

state 3

    (4) instrucciones -> instruccion .

    error           reduce using rule 4 (instrucciones -> instruccion .)
    PRINT           reduce using rule 4 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 4 (instrucciones -> instruccion .)
    ID              reduce using rule 4 (instrucciones -> instruccion .)
    LOCAL           reduce using rule 4 (instrucciones -> instruccion .)
    GLOBAL          reduce using rule 4 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 4 (instrucciones -> instruccion .)
    WHILE           reduce using rule 4 (instrucciones -> instruccion .)
    BREAK           reduce using rule 4 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 4 (instrucciones -> instruccion .)
    RETURN          reduce using rule 4 (instrucciones -> instruccion .)
    IF              reduce using rule 4 (instrucciones -> instruccion .)
    FOR             reduce using rule 4 (instrucciones -> instruccion .)
    POP             reduce using rule 4 (instrucciones -> instruccion .)
    PUSH            reduce using rule 4 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 4 (instrucciones -> instruccion .)
    MUTABLE         reduce using rule 4 (instrucciones -> instruccion .)
    $end            reduce using rule 4 (instrucciones -> instruccion .)
    END             reduce using rule 4 (instrucciones -> instruccion .)
    ELSE            reduce using rule 4 (instrucciones -> instruccion .)
    ELSEIF          reduce using rule 4 (instrucciones -> instruccion .)


state 4

    (5) instruccion -> imprimir_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 41

state 5

    (6) instruccion -> asignacion_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 43

state 6

    (7) instruccion -> declaracion_var_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 44

state 7

    (8) instruccion -> modificar_arreglo . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 45

state 8

    (9) instruccion -> funciones_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 46

state 9

    (10) instruccion -> while_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 47

state 10

    (11) instruccion -> llamada_funcion_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 48

state 11

    (12) instruccion -> break_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 49

state 12

    (13) instruccion -> continue_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 50

state 13

    (14) instruccion -> return_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 51

state 14

    (15) instruccion -> if_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 52

state 15

    (16) instruccion -> for_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 53

state 16

    (17) instruccion -> pop_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 54

state 17

    (18) instruccion -> push_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 55

state 18

    (19) instruccion -> structs_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 56

state 19

    (20) instruccion -> llamada_funcion_struct_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 57

state 20

    (21) instruccion -> modificacion_struct . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 58

state 21

    (22) instruccion -> error . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 42

    fininstr                       shift and go to state 59

state 22

    (81) imprimir_instr -> PRINT . PARENTESISA PARENTESISC
    (83) imprimir_instr -> PRINT . PARENTESISA expresiones_coma PARENTESISC

    PARENTESISA     shift and go to state 60


state 23

    (82) imprimir_instr -> PRINTLN . PARENTESISA PARENTESISC
    (84) imprimir_instr -> PRINTLN . PARENTESISA expresiones_coma PARENTESISC

    PARENTESISA     shift and go to state 61


state 24

    (68) asignacion_instr -> ID . IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (69) asignacion_instr -> ID . IGUAL expresion
    (76) declaracion_var_instr -> ID .
    (70) modificar_arreglo -> ID . lista_dimensiones IGUAL expresion
    (91) llamada_funcion_instr -> ID . PARENTESISA PARENTESISC
    (92) llamada_funcion_struct_instr -> ID . PARENTESISA parametros_llamada PARENTESISC
    (118) modificacion_struct -> ID . PUNTO ID IGUAL expresion
    (72) lista_dimensiones -> . lista_dimensiones CORCHETEA expresion CORCHETEC
    (73) lista_dimensiones -> . CORCHETEA expresion CORCHETEC

    IGUAL           shift and go to state 62
    PUNTOCOMA       reduce using rule 76 (declaracion_var_instr -> ID .)
    PARENTESISA     shift and go to state 64
    PUNTO           shift and go to state 65
    CORCHETEA       shift and go to state 66

    lista_dimensiones              shift and go to state 63

state 25

    (74) declaracion_var_instr -> LOCAL . ID
    (78) declaracion_var_instr -> LOCAL . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (80) declaracion_var_instr -> LOCAL . ID IGUAL expresion

    ID              shift and go to state 67


state 26

    (75) declaracion_var_instr -> GLOBAL . ID
    (77) declaracion_var_instr -> GLOBAL . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (79) declaracion_var_instr -> GLOBAL . ID IGUAL expresion

    ID              shift and go to state 68


state 27

    (85) funciones_instr -> FUNCTION . ID PARENTESISA PARENTESISC instrucciones END
    (86) funciones_instr -> FUNCTION . ID PARENTESISA parametros PARENTESISC instrucciones END

    ID              shift and go to state 69


state 28

    (95) while_instr -> WHILE . expresion instrucciones END
    (23) expresion -> . PARENTESISA expresion PARENTESISC
    (24) expresion -> . CADENA
    (25) expresion -> . CARACTER
    (26) expresion -> . ENTERO
    (27) expresion -> . DOBLE
    (28) expresion -> . NOTHING
    (29) expresion -> . ID
    (30) expresion -> . bandera
    (31) expresion -> . expresion MAS expresion
    (32) expresion -> . expresion MENOS expresion
    (33) expresion -> . expresion ASTERISCO expresion
    (34) expresion -> . expresion DIVISION expresion
    (35) expresion -> . expresion POTENCIA expresion
    (36) expresion -> . expresion PORCENTAJE expresion
    (37) expresion -> . expresion IGUALIGUAL expresion
    (38) expresion -> . expresion DIFERENTE expresion
    (39) expresion -> . expresion MENOR expresion
    (40) expresion -> . expresion MAYOR expresion
    (41) expresion -> . expresion MENORIGUAL expresion
    (42) expresion -> . expresion MAYORIGUAL expresion
    (43) expresion -> . expresion AND expresion
    (44) expresion -> . expresion OR expresion
    (45) expresion -> . NOT expresion
    (46) expresion -> . MENOS expresion
    (47) expresion -> . llamada_funcion_instr
    (48) expresion -> . llamada_funcion_struct_instr
    (49) expresion -> . CORCHETEA expresiones_coma CORCHETEC
    (50) expresion -> . acceso_arreglo
    (51) expresion -> . push_instr
    (52) expresion -> . pop_instr
    (53) expresion -> . acceso_struct
    (54) expresion -> . PARSE PARENTESISA INT64 COMA expresion PARENTESISC
    (55) expresion -> . PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
    (56) expresion -> . SSTRING PARENTESISA expresion PARENTESISC
    (61) bandera -> . TRUE
    (62) bandera -> . FALSE
    (91) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (92) llamada_funcion_struct_instr -> . ID PARENTESISA parametros_llamada PARENTESISC
    (71) acceso_arreglo -> . ID lista_dimensiones
    (58) push_instr -> . PUSH NOT PARENTESISA expresion COMA expresion PARENTESISC
    (57) pop_instr -> . POP NOT PARENTESISA expresion PARENTESISC
    (117) acceso_struct -> . ID PUNTO ID

    PARENTESISA     shift and go to state 71
    CADENA          shift and go to state 72
    CARACTER        shift and go to state 73
    ENTERO          shift and go to state 74
    DOBLE           shift and go to state 75
    NOTHING         shift and go to state 76
    ID              shift and go to state 77
    NOT             shift and go to state 80
    MENOS           shift and go to state 79
    CORCHETEA       shift and go to state 83
    PARSE           shift and go to state 88
    SSTRING         shift and go to state 89
    TRUE            shift and go to state 90
    FALSE           shift and go to state 91
    PUSH            shift and go to state 35
    POP             shift and go to state 34

    expresion                      shift and go to state 70
    bandera                        shift and go to state 78
    llamada_funcion_instr          shift and go to state 81
    llamada_funcion_struct_instr   shift and go to state 82
    acceso_arreglo                 shift and go to state 84
    push_instr                     shift and go to state 85
    pop_instr                      shift and go to state 86
    acceso_struct                  shift and go to state 87

state 29

    (100) break_instr -> BREAK .

    PUNTOCOMA       reduce using rule 100 (break_instr -> BREAK .)


state 30

    (101) continue_instr -> CONTINUE .

    PUNTOCOMA       reduce using rule 101 (continue_instr -> CONTINUE .)


state 31
